[tool.poetry]
name = "streamlit-tutorial"
version = "0.1.0"
description = ""
authors = ["Marcus Winter <mw210992@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
streamlit = "^0.80.0"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
altair = "^4.1.0"
bokeh = "^2.3.1"
plotly = "^4.14.3"
scipy = "^1.6.3"
watchdog = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
